# CMP501-Assessment

./: .clang-format  .gitignore  CMakeLists.txt
include/: Snapshot.hpp
include/Client/: Client.hpp
include/Game/: Pong.hpp
include/Server/: Server.hpp
src/: Snapshot.cpp
src/Client/: Client.cpp  main.cpp
src/Game/: Pong.cpp
src/Server/: Server.cpp  main.cpp
